# adios

./: .gitignore  CMakeLists.txt  README.md  launch.sh
apps/dp-run/: .gitignore  Makefile  dp-run.c  module.py  usr.manifest
dilos/: Makefile  loader.cc  usr.manifest.skel  usr_ramfs.manifest.skel  usr_rofs.manifest.skel
dilos/arch/x64/: exceptions.cc  exceptions.hh  mmu.cc
dilos/core/: app.cc  mempool.cc
dilos/core-ddc/: dispatcher.cc  dummy.cc  mmu-ext.cc  options.cc  pte.hh  reclaimer.cc  stat.cc  traces.cc  virtio-uverbs-trans.c  virtio-uverbs-trans.h  virtio-uverbs.cc  virtio-uverbs.hh
dilos/fs/ddcfs/: ddcfs.h  ddcfs_vfsops.cc  ddcfs_vnops.cc
dilos/fs/rofs/: rofs_vnops.cc
dilos/fs/vfs/: vfs_conf.cc  vfs_fops.cc
dilos/include/ddc/: mman.h  mmu.hh  options.hh  remote.hh
dilos/include/osv/: preempt-lock.hh  sched.hh  vnode.h
dilos/libc/: mman.cc
dilos/libc/stdlib/: wcstod.c
dilos/scripts/: run.py
dilos/static/etc/: fstab_rofs
dispatcher/: CMakeLists.txt
dispatcher/include/: me.hh
dispatcher/include/config/: arg-config.hh  cmake-config.hh.in  rocksdb.hh  static-config.hh
dispatcher/include/dispatcher/: api.hh  app.hh  common.hh  context.hh  ctx.h  cycles.h  dispatcher.hh  job.hh  likely.h  loader.hh  logger.hh  mm.hh  nanocontext.h  net.hh  page.hh  pagepool.hh  prefetch.hh  raw-eth.hh  rdma.hh  reclaimer.hh  spinlock.hh  traces.hh  ucontext-fast.h  worker.hh
dispatcher/include/protocol/: cmd.hh  memcached.h  net.hh  req.hh  rocksdb.h
dispatcher/lib/: faiss.cc  gapbs.cc  memcached.c  rocksdb.cc  silo.cc
dispatcher/src/: app.cc  context-asm.S  context.cc  dispatcher.cc  job.cc  linux-mmap.cc  linux.cc  main.cc  mm.cc  nanocontext-mk.c  nanocontext.S  raw-eth.cc  rdma.cc  ucontext.cc  worker.cc
libddcfs/: CMakeLists.txt
libddcfs/include/: ddcfs.hh
libddcfs/src/: ddcfs.cc  override.cc
mimalloc-bitmap/: CMakeLists.txt
mimalloc-bitmap/src/: init.c  os.c
qemu/: vl.c
qemu/hw/virtio/: virtio-uverbs.c
rdma-core/: CMakeLists.txt
rdma-core/buildlib/: config.h.in
rdma-core/debian/: changelog  rules
rdma-core/providers/mlx5/: dr_action.c  dr_arg.c  dr_ste_v1.c  mlx5_vfio.c  mlx5dv_dr.h
script/: latency-99-cores.py  latency-99.py  latency-breakdown-hermit.py  latency-breakdown-test.py  latency-breakdown.py  latency-dist.py  latency.py  report.py  test.py
virtio-uverbs-trans/virtio-uverbs/: ibverbs.h  ioctl.h  mlx5.h  prot.h  qemu.h
